# openrex-lpc

./: .gitignore  README.md
canvaslib/: canvas_common.h  commands.c  commands.h
examples/blink_leds/: CMakeLists.txt  main.c
examples/command_leds/: CMakeLists.txt  main.c  main.h  readme.txt  setup-ttymxc1.sh
examples/skeleton/: CMakeLists.txt
examples/spi_canvas/: CMakeLists.txt  build.sh  canvas.h  commands.c  commands.h  main.c
examples/spi_game/: CMakeLists.txt  build.sh  main.c
examples/spi_slave/: CMakeLists.txt  main.c  readme.txt
lpc_open/init/: sysinit.c  utils.c
lpc_open/lpc_core/lpc_board/board_common/: board_api.h
lpc_open/lpc_core/lpc_board/boards_13xx/fedevel_openrex/: assert.h  board.c  board.h  board_sysinit.c
lpc_open/lpc_core/lpc_board/boards_13xx/fedevel_openrex/gcc/: flash-target.ld
lpc_open/lpc_core/lpc_board/boards_13xx/nxp_lpcxpresso_1343/: board.c  board.h  board_sysinit.c  lib_lpc_board_nxp_lpcxpresso_1343.ewp  lib_lpc_board_nxp_lpcxpresso_1343.uvproj
lpc_open/lpc_core/lpc_chip/chip_13xx/: adc_13xx.c  adc_13xx.h  chip.h  chip_13xx.c  clock_13xx.c  clock_13xx.h  cmsis.h  config.xml  flash_13xx.c  flash_13xx.h  fmc_13xx.h  gpio_13xx_1.c  gpio_13xx_1.h  gpio_13xx_2.c  gpio_13xx_2.h  gpiogroup_13xx.c  gpiogroup_13xx.h  i2c_13xx.c  i2c_13xx.h  i2cm_13xx.c  i2cm_13xx.h  iocon_13xx.c  iocon_13xx.h  lib_lpc_chip_1343.ewp  lib_lpc_chip_1343.uvproj  pinint_13xx.c  pinint_13xx.h  pmu_13xx.c  pmu_13xx.h  ritimer_13xx.c  ritimer_13xx.h  romapi_13xx.h  ssp_13xx.c  ssp_13xx.h  stopwatch_13xx.c  sysctl_13xx.c  sysctl_13xx.h  sysinit_13xx.c  timer_13xx.c  timer_13xx.h  (+5 more)
lpc_open/lpc_core/lpc_chip/chip_13xx/config_1343/: cmsis_1343.h  sys_config.h
lpc_open/lpc_core/lpc_chip/chip_13xx/config_1347/: cmsis_1347.h  sys_config.h
lpc_open/lpc_core/lpc_chip/chip_common/: error.h
scripts/: ttymxc1-default.sh
